--- a/pychess/templates/pychess/play.html
+++ b/pychess/templates/pychess/play.html
@@ -12,11 +12,26 @@ Play chess!
             <a href="{% url 'localGame' %}">New Local Game</a>
         </div>
         <div>
-            <a href="{% url 'networkGame' %}?g=new">New Network Game</a>
+            <a href="#" id="new">New Network Game</a>
         </div>
         <div>
-            <a href="{% url 'networkGame' %}?g=join">Join Network Game</a>
+            <a href="#" id="join">Join Network Game</a>
         </div>
     </div>
 
+
+    <script>
+        document.querySelector("#new").addEventListener('click', newGame);
+        document.querySelector("#join").addEventListener('click', joinGame);
+
+        function newGame()
+        {
+            window.alert("test 2");
+        }
+
+        function joinGame()
+        {
+            window.alert("test 3");
+        }
+    </script>
 {% endblock %}
