--- a/pychess/templates/pychess/localGame.html
+++ b/pychess/templates/pychess/localGame.html
@@ -21,7 +21,7 @@ Play Chess!
                             <strong id="player"></strong> to move
                         </h2>
                     </div>
-                    <div class="infoBottom" id="moveList">
+                    <div class="infoBottomLocal" id="moveList">
 
                     </div>
                 </div>
