--- a/pychess/templates/pychess/play.html
+++ b/pychess/templates/pychess/play.html
@@ -12,7 +12,7 @@ Play chess!
             <a href="{% url 'localGame' %}">New Local Game</a>
         </div>
         <div>
-            <a href="#" id="new">New Network Game</a>
+            <a href="{% url 'networkGame' %}">New Network Game</a>
         </div>
         <div>
             <a href="#" id="join">Join Network Game</a>
