changed Home and Play pages
Play page will now display a form and let you join a network game with a room code. It will also redirect you to the local game page if you enter a local game room code.

Home page will now display a list of active network games, and the links display the room code & username of the opponent. Formatting is still a big WIP.

--- a/pychess/templates/pychess/index.html
+++ b/pychess/templates/pychess/index.html
@@ -7,13 +7,51 @@ pyChess Home
 
 
 {% block body %}
-    {% if localGames %}
-        <Strong>Local Games: </Strong>
-        <br>
-        {% for game in localGames %}
-            <a href="{% url 'localGame' %}?room={{game.roomCode}}">{{ game }}</a><br>
-        {% endfor %}
+    <div class="centeredContent">
+    {% if localGames or networkGames %}
+        {% if localGames %}
+            <div style="display:flex; flex-direction: column;">
+                <Strong>Local Games: </Strong>
+                <br>
+                {% for game in localGames %}
+                    <a href="{% url 'localGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a><br>
+                {% endfor %}
+            </div>
+
+            <br><br>
+        {% endif %}
+
+        {% if networkGames %}
+            <div style="display:flex; flex-direction: column;">
+            <Strong>Network Games: </Strong>
+            <table>
+            {% for game in networkGames %}
+                
+                <tr>
+                    <td style="padding-right: 15px;">
+                        <a href="{% url 'networkGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a>
+                    </td>
+
+                    <td>
+                        {% if game.player2%}
+                            {% if request.user == game.player1 %}
+                                Playing Against: {{ game.player2 }}
+                            {% else %}
+                                Playing Against: {{ game.player1 }}
+                            {% endif %}
+                        {% else %}
+                            Waiting on player
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+            </table>
+            </div>
+        {% endif %}
+
+
     {% else %}
         No Active Games
     {% endif %}
+    </div>
 {% endblock %}
