Finished Styling home page
Added a bunch of CSS to make the home page look a little nicer. Now displays active games, both local & network in separate columns. Displays a big banner across the top to show the number of wins, draws, and losses a user has. Visiting this page without being logged in will redirect to the login page.

--- a/pychess/templates/pychess/layout.html
+++ b/pychess/templates/pychess/layout.html
@@ -24,6 +24,7 @@
                     <a class="navlink" href="{% url 'play' %}">Play</a>
                     <a class="navlink" href="{% url 'review' %}">Review</a>
                     <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
+                    <a class="navlink" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                     <a class="navlink" href="{% url 'login' %}">Login</a>
                     <a class="navlink" href="{% url 'register' %}">Register</a>
