--- a/pychess/templates/pychess/index.html
+++ b/pychess/templates/pychess/index.html
@@ -7,51 +7,80 @@ pyChess Home
 
 
 {% block body %}
-    <div class="centeredContent">
-    {% if localGames or networkGames %}
-        {% if localGames %}
-            <div style="display:flex; flex-direction: column;">
-                <Strong>Local Games: </Strong>
-                <br>
-                {% for game in localGames %}
-                    <a href="{% url 'localGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a><br>
-                {% endfor %}
-            </div>
+    <div class="content">
+    
+        <br>
+    
+        <div style="width:100%; text-align: center;">
+            <h1>
+                <span>Wins: {{ completedGames.wins }}</span>
+                <span style="margin:10%;">Draws: {{ completedGames.draws }}</span>
+                <span>Losses: {{ completedGames.losses }}</span>
+            </h1>
+        </div>
 
-            <br><br>
-        {% endif %}
+        <br><br>
 
-        {% if networkGames %}
-            <div style="display:flex; flex-direction: column;">
-            <Strong>Network Games: </Strong>
-            <table>
-            {% for game in networkGames %}
-                
-                <tr>
-                    <td style="padding-right: 15px;">
-                        <a href="{% url 'networkGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a>
-                    </td>
+        <div style="margin:auto; width:30%; text-align: center;">
+            
+            {% if localGames or networkGames %}
 
-                    <td>
-                        {% if game.player2%}
-                            {% if request.user == game.player1 %}
-                                Playing Against: {{ game.player2 }}
-                            {% else %}
-                                Playing Against: {{ game.player1 }}
-                            {% endif %}
-                        {% else %}
-                            Waiting on player
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-            </table>
-            </div>
-        {% endif %}
+                <table style="float:left">
+                    <thead>
+                        <tr>
+                            <th>
+                                <h2>Local Games: </h2>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for game in localGames %}
+                    <tr>
+                        <td style="font-size: 20px;">
+                            <a href="{% url 'localGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a><br>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
 
 
-    {% else %}
-        No Active Games
-    {% endif %}
+                <table style="float:right">
+                    <thead>
+                        <th colspan="2">
+                            <h2>Network Games: </h2>
+                        </th>
+                    </thead>
+
+                    <tbody>
+                    {% for game in networkGames %} 
+                        <tr>
+                            <td style="padding-right: 15px; font-size: 20px;">
+                                <a href="{% url 'networkGame' %}?room={{game.roomCode}}">Room: {{ game.roomCode }}</a>
+                            </td>
+
+                            <td style="font-size: 20px;">
+                                {% if game.player2%}
+                                    {% if request.user == game.player1 %}
+                                        Playing Against: {{ game.player2 }}
+                                    {% else %}
+                                        Playing Against: {{ game.player1 }}
+                                    {% endif %}
+                                {% else %}
+                                    Waiting on player
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+
+            
+            {% else %}
+                <h2>No Active Games</h2>
+            {% endif %}
+
+        </div>
+
     </div>
 {% endblock %}
